--- a/Aspiration/pom.xml
+++ b/Aspiration/pom.xml
@@ -104,6 +104,7 @@
                                 <!-- Change to match your mods name.
                                      This moves your mod into a common folder where all mods you make can go. -->
                                 <copy file="target/Aspiration.jar" tofile="../mods/Aspiration.jar"/>
+								<copy file="target/Aspiration.jar" tofile="G:/SteamGames/steamapps/common/SlayTheSpire/mods/Aspiration.jar"/>
                             </target>
                         </configuration>
                         <goals>
