--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                                 <!-- Change to match your mods name.
                                      This moves your mod into a common folder where all mods you make can go. -->
                                 <copy file="target/Aspiration.jar" tofile="../mods/Aspiration.jar"/>
-								<copy file="target/Aspiration.jar" tofile="G:/SteamGames/steamapps/common/SlayTheSpire/mods/Aspiration.jar"/>
+								<copy file="target/Aspiration.jar" tofile="K:/Steam/steamapps/common/SlayTheSpire/mods/Aspiration.jar"/>
 								<copy file="target/Aspiration.jar" tofile="../raw_resources/Uploads/Aspiration/content/Aspiration.jar"/>
                             </target>
                         </configuration>
