--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
-# Compiled class file
 *.class
 
-# Log file
-*.log
+# IntelliJ
+.idea/
+out/
+*.iml
 
-# BlueJ files
-*.ctxt
+# Eclipse
+.classpath
+.project
+.settings/
+
+# maven build target
+target/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -13,26 +19,65 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# Unneeded shit #
-dependency-reduced-pom.xml
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+# =========================
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# Spriter files
+*.autosave.scml
+
+# Unneeded shit
 compile.bat
-.project
-.classpath
-target*
-.settings
-.idea/compiler.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
-Aspiration.iml
-WatDis.iml
-.idea/inspectionProfiles/Project_Default.xml
-.idea/uiDesigner.xml
+dependency-reduced*
