Massive Commit (read Description)
Added better Damage all enemies action (for mod compatibility)

Added RelicPreviewButton to applicable events

Rewrote Snecko Tail
Added Stabinomicon and added patches to make it appear in Cursed Tome event and small cahnce after fighting it.
Fixed Sticky Explosives
Added Tome of Questing (infinite crossover)
Made Future Diary compulsion card more obvious.
Made Hummingbird Hear uncommon
Changed Infernal Blood (removed power heal, inc attack heal)
Changed Kaom's Heart's price
Removed RelicAboveCreature effect from marisa Skillbook
Removed Envenom Powertip from Silent Skillbook
Reworked Snecko Tail (Befuddled)
Allowed SCoin to trigger whenever you have charges and fixed pulsing
Reworked a few relic images

Made all powers Cloneable
Added Beffuddled and Grievous Wounds Powers because of relics.

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
                <scope>system</scope>
                <systemPath>${basedir}/../lib/Conspire.jar</systemPath>
         </dependency>
+		<dependency>
+               <groupId>InfiniteSpire</groupId>
+               <artifactId>InfiniteSpire</artifactId>
+               <version>0.15.1</version>
+               <scope>system</scope>
+               <systemPath>${basedir}/../lib/InfiniteSpire.jar</systemPath>
+        </dependency>
 		
     </dependencies>
 
