--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/../lib/vexMod.jar</systemPath>
         </dependency>
+		<dependency>
+            <groupId>thescribe</groupId>
+            <artifactId>TheScribe</artifactId>
+            <version>0.5.9</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/../lib/TheScribe.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <properties>
