--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/../lib/TheScribe.jar</systemPath>
         </dependency>
+		<dependency>
+            <groupId>eatyourbeetsvg</groupId>
+            <artifactId>eatyourbeetsvg</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/../lib/TheAnimator.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <properties>
