--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/../lib/TheAnimator.jar</systemPath>
         </dependency>
+		<dependency>
+            <groupId>com.evacipated.cardcrawl.mod</groupId>
+            <artifactId>hubris</artifactId>
+            <version>0.22.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/../lib/Hubris.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <properties>
