--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/../lib/Hubris.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.evacipated.cardcrawl.mod</groupId>
+            <artifactId>bard</artifactId>
+            <version>1.0.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/../lib/bard.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <properties>
