--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
                         <configuration>
                             <target>
                                 <!-- This moves your mod into a common folder where all mods you make can go. -->
-                                <copy file="target/${project.artifactId}.jar" tofile="K:/Steam/steamapps/common/SlayTheSpire/mods/Aspiration.jar"/>
+                                <copy file="target/${project.artifactId}.jar" tofile="E:/SteamLibrary/steamapps/common/SlayTheSpire/mods/Aspiration.jar"/>
                             </target>
                         </configuration>
                         <goals>
